# AudioVideoSynchronization

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/audiovideosynchronization/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  FFmpegHelper.cpp  JavaCallHelper.cpp  VideoChannel.cpp  native-lib.cpp  safe_queue.cpp
app/src/main/cpp/include/: AudioChannel.h  FFmpegHelper.h  JavaCallHelper.h  VideoChannel.h  comm.h  safe_queue.h
app/src/main/java/com/example/audiovideosynchronization/: FFmpegSurface.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/audiovideosynchronization/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
